--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
     </fieldset>
 
     <fieldset>
-      <input type="file" tabindex="1" required autofocus>
+      <input type="file" name="file" tabindex="1" required autofocus>
     </fieldset>
     <fieldset>
       <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
