update contact information

--- a/error.html
+++ b/error.html
@@ -23,7 +23,7 @@
       <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Current Ranking</button>
     </fieldset>
     <fieldset>
-    <h4>If any bug, please contact Meng at <a href="mailto:mcao4@stevens.edu" target="_top">mcao4@stevens.edu</a></h4>
+      <h4>If any bug, please contact Meng at <a href="mailto:meng.cao.214@gmail.com" target="_top">meng.cao.214@gmail.com</a></h4>
     </fieldset>
   </form>
 </div>
